clusters/_profiles/_base/namespaces.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: kyverno

---
apiVersion: v1
kind: Namespace
metadata:
  name: networking

---
apiVersion: v1
kind: Namespace
metadata:
  name: storage

---
apiVersion: v1
kind: Namespace
metadata:
  name: elastic-system

---
apiVersion: v1
kind: Namespace
metadata:
  name: elastic

---
apiVersion: v1
kind: Namespace
metadata:
  name: podinfo
  labels:
    app.kubernetes.io/name: podinfo
