clusters/_profiles/_base/nginx-gateway-fabric.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: http
  namespace: networking
spec:
  gatewayClassName: nginx
  listeners: []
