clusters/_profiles/_base/nginx.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: http
  namespace: nginx
spec:
  gatewayClassName: nginx
  listeners:
    - name: http
      port: 80
      protocol: HTTP
#      allowedRoutes:
#        namespaces:
#          from: All

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: podinfo
  namespace: nginx
spec:
  parentRefs:
    - name: http
      namespace: nginx
  hostnames:
    - "k8s-es.symplectic.internal"
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: podinfo
          namespace: podinfo
          port: 9898

---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: podinfo
  namespace: podinfo
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: nginx
  to:
    - group: ""
      kind: Service
